--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@ crossorigin="anonymous">
                     imagen.style.width = '90px';
                     imagen.style.margin = '5px';                                                         
                     lista.appendChild(div).appendChild(item).appendChild(imagen);               
-                    
-                    
+                    document.write("<p>"+localStorage.key(i)+"</p>");                     
                 }
             </script>
         </ul>   
